Foobar theme metadate contrast issue resolved

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -164,7 +164,7 @@ div p
             padding 0.2em 0.1em
             li
                 font-size small_font_size
-                color heading_color
+                color nonexistent_link_color
                 font-weight normal
                 padding 0.1em 0.1em 0.1em 0.1em
                 border none
